--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,20 +1,47 @@
+:root {
+  --primary-color: #000;
+  --seconday-color: red;
+  --font-family: "Archivo", sans-serif;
+}
+
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: var(--primary-color) !important;
+}
+
+.navbar-logo {
+  max-width: 50%;
+  height: auto;
+}
+
+.nav-link {
+  color: var(--seconday-color) !important;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 h1 {
   font-family: "Archivo", sans-serif;
   font-size: 60px;
+  text-align: center;
   font-weight: 500;
-  color: red;
+  color: var(--seconday-color) !important;
+  margin: auto 0;
+  padding-top: 20px;
 }
 
-p {
-  color: rgb(255, 254, 254);
+h3 {
+  color: white !important;
   font-family: "Libre Baskerville", serif;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
+  padding: 20px;
 }
 
 i {
