--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,21 +12,11 @@ body {
   color: var(--seconday-color) !important;
 }
 
-img {
+.main-logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-}
-
-h1 {
-  font-family: "Archivo", sans-serif;
-  font-size: 60px;
-  text-align: center;
-  font-weight: 500;
-  color: var(--seconday-color) !important;
-  margin: auto 0;
-  padding-top: 20px;
+  width: 100%;
 }
 
 i {
@@ -37,6 +27,7 @@ i {
 .hero {
   background: var(--primary-color);
   text-align: center;
+  padding: 160px 20px;
 }
 
 .hero p {
