--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,9 @@ i {
   width: 100%;
 }
 
+.work-projects {
+  color: white;
+}
 .about-title {
   color: white;
 }
@@ -41,4 +44,17 @@ i {
   font-style: normal;
   text-align: center;
   padding: 20px;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding-bottom: 20px;
+  color: white;
+  text-align: center;
+}
+
+@media (max-width: 800px) {
 }
