--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,11 @@ body {
   padding: 0 auto;
   display: block;
 }
+
+.container-about {
+  padding: 0 auto;
+  display: block;
+}
 i {
   color: red;
   width: 100%;
