--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,6 +31,18 @@ body {
   text-align: center;
 }
 
+.about-container {
+  padding: 10px 100px 70px;
+  display: block;
+  text-align: center;
+}
+.redsky-description {
+  font-family: var(--font-family);
+  color: white;
+  font-size: 23px;
+  text-align: justify;
+}
+
 .content-container h3 {
   color: white;
   font-size: 18px;
@@ -61,7 +73,7 @@ i {
 .hero p {
   font-family: "Libre Baskerville", serif;
   color: white;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 400;
   font-style: normal;
   text-align: center;
