--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -58,13 +58,16 @@ body {
 }
 
 .studio-images {
+  max-width: 425px;
+  height: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 }
 
 .img-fluid {
-  width: 30%;
+  max-width: 50%;
+  height: auto;
   display: block;
   margin: 0 auto;
 }
@@ -120,6 +123,7 @@ i {
 .footer-nav {
   display: flex;
   flex-direction: column;
+  visibility: hidden;
 }
 
 @media (max-width: 800px) {
@@ -136,13 +140,23 @@ i {
   }
   .about-container {
     padding: 20px 0;
+    display: block;
+    margin: 0 auto;
   }
 
   .img-fluid {
-    width: 50%;
+    max-width: 30%;
     text-align: center;
     margin: 0 auto;
     display: block;
     padding: 20px;
+  }
+
+  .studio-images {
+    max-width: 33%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 }
