--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,7 +49,7 @@ body {
 
 .content-container h3 {
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   margin: 20px 0 0;
   line-height: 1.5;
   font-family: var(--font-family);
@@ -143,7 +143,7 @@ body {
   .redsky-description {
     font-family: var(--font-family);
     color: white;
-    font-size: 15px;
+    font-size: 12px;
     text-align: justify;
     margin: 0 auto;
   }
@@ -157,12 +157,12 @@ body {
     margin: 0 auto;
   }
 
-  .img-fluid {
-    max-width: 30%;
+  .content-container img {
+    max-width: 50%;
     text-align: center;
     margin: 0 auto;
     display: block;
-    padding: 20px;
+    padding: 20px 0;
   }
 
   .studio-images {
@@ -171,6 +171,10 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+  }
+
+  .content-container h3 {
+    font-size: 13px;
   }
 }
 @media (min-width: 992px) {
