--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,10 @@ body {
   background-color: var(--primary-color) !important;
 }
 
+h3 {
+  padding-bottom: 10px;
+}
+
 .nav-link {
   color: white !important;
 }
