--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -180,6 +180,10 @@ h3 {
   .content-container h3 {
     font-size: 13px;
   }
+
+  .btn-sm {
+    font-size: 10px;
+  }
 }
 @media (min-width: 992px) {
   .navbar-collapse {
