--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -13,6 +13,17 @@ h3 {
   padding-bottom: 10px;
 }
 
+span,
+.coders-link {
+  font-size: 9px;
+  color: var(--tertiarty-color);
+}
+
+.coders-link {
+  font-weight: 200;
+  text-decoration: none;
+}
+
 .nav-link {
   color: white !important;
 }
