--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -157,6 +157,10 @@ span,
 }
 
 @media (max-width: 800px) {
+  .navbar-item {
+    font-size: 13px;
+  }
+
   .redsky-description {
     font-family: var(--font-family);
     color: white;
