--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,11 +9,6 @@ body {
   background-color: var(--primary-color) !important;
 }
 
-h3,
-p {
-  font-size: 50px;
-}
-
 span,
 .coders-link {
   font-size: 9px;
@@ -51,6 +46,11 @@ span,
   padding: 30px 100px;
   display: block;
   text-align: center;
+}
+
+.content h3 {
+  font-size: 50px;
+  color: white;
 }
 
 .about-container {
