--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -216,7 +216,8 @@ span,
 
   .contact-container {
     max-width: 100%;
-    margin: 0 10px;
+    padding-top: 50px;
+    margin: 0 auto;
     margin-left: 0;
     margin-right: 0;
   }
