--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -186,13 +186,22 @@ i:hover {
   visibility: hidden;
 }
 
+.nav-mobile {
+  padding: 0 15px;
+  top: 0;
+  width: 275px;
+  right: -275px;
+  height: 100%;
+  overflow-y: auto;
+}
+
 @media (max-width: 800px) {
   h3 {
     font-size: 40px;
   }
 
   .navbar-item {
-    font-size: 15px;
+    font-size: 22px;
   }
 
   .redsky-description {
