--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -186,7 +186,7 @@ i:hover {
   visibility: hidden;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 820px) {
   .hero p {
     font-size: 40px;
   }
@@ -195,6 +195,10 @@ i:hover {
     font-size: 40px;
   }
 
+  img {
+    width: 100%;
+    height: auto;
+  }
   .nav-item {
     font-size: 60px;
   }
@@ -222,13 +226,20 @@ i:hover {
   }
 
   .studio-images {
-    max-width: 33%;
+    max-width: 80%;
     height: auto;
-    display: flex;
-    flex-direction: row;
+    display: block;
+    margin: 0 auto;
+    flex-direction: column;
     flex-wrap: nowrap;
   }
 
+  .col-sm-4 {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
   .content {
     max-width: 100%;
   }
@@ -249,6 +260,29 @@ i:hover {
     margin: 0 auto;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .follow-us {
+    font-size: 18px;
+  }
+
+  .social-media-home,
+  .social-media-contact {
+    width: 100%;
+    padding: 800px 30px;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+    color: var(--seconday-color);
+    width: 100%;
+  }
+
+  .social-media {
+    width: 100%;
+    padding: 300px 30px;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+    color: var(--seconday-color);
+    width: 100%;
   }
 }
 
