--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,7 +23,7 @@ span,
 }
 
 .nav-link {
-  color: rgb(0, 0, 0) !important;
+  color: rgb(255, 255, 255) !important;
 }
 
 .navbar-nav {
@@ -196,22 +196,83 @@ i:hover {
     color: var(--tertiarty-color);
   }
 
-  img {
-    width: 100%;
-    height: auto;
-  }
-
   .nav-item {
     font-size: 50px;
   }
 
-  .navbar-toggler-icon {
-    stroke-width: 4;
+  .navbar-toggler {
+    width: 40px;
+    height: 10px;
+    margin-top: 20px;
+    position: relative;
+    transition: 0.5s ease-in-out;
   }
 
-  .navbar-toggler {
-    border: 2px solid white;
+  .navbar-toggler,
+  .navbar-toggler:focus,
+  .navbar-toggler:active,
+  .navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+    border: 0;
   }
+
+  .navbar-toggler span {
+    margin: 0;
+    padding: 0;
+  }
+
+  .toggler-icon {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: white;
+    border-radius: 1px;
+    border-color: white;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: 0.25s ease-in-out;
+  }
+
+  .middle-bar {
+    margin-top: 0px;
+  }
+
+  /*when navigation is clicked */
+
+  .navbar-toggler .top-bar {
+    margin-top: 0;
+    transform: rotate(135deg);
+  }
+
+  .navbar-toggler .middle-bar {
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
+
+  .navbar-toggler .bottom-bar {
+    margin-top: 0px;
+    transform: rotate(-135deg);
+  }
+
+  /* State when the navbar is collapsed */
+
+  .navbar-toggler.collapsed .top-bar {
+    margin-top: -20px;
+    transform: rotate(0deg);
+  }
+  .navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+
+  .navbar-toggler.collapsed .bottom-bar {
+    margin-top: 20px;
+    transform: rotate(0deg);
+  }
+
   .redsky-description {
     font-family: var(--font-family);
     color: white;
