--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -346,7 +346,7 @@ i:hover {
   .social-media-home,
   .social-media-contact {
     width: 100%;
-    padding: 400px 30px 20px 30px;
+    padding: 500px 30px 20px 30px;
     border-radius: 50%;
     transition: all 100ms ease-in-out;
     color: var(--seconday-color);
@@ -373,6 +373,16 @@ i:hover {
     color: var(--tertiarty-color);
   }
 
+  #map {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .office-address,
+  .office-country {
+    font-size: 25px;
+  }
   .nav-item {
     font-size: 25px;
   }
