--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,7 +38,7 @@ span,
 }
 
 .home-container {
-  padding: 100px 100px 300px;
+  padding: 335px 100px 300px;
   display: block;
 }
 
@@ -53,7 +53,7 @@ span,
 }
 
 .about-container {
-  padding: 20px 100px 139px;
+  padding: 20px 100px 10px;
   display: block;
   text-align: center;
 }
@@ -352,15 +352,6 @@ i:hover {
     color: var(--seconday-color);
     width: 100%;
   }
-
-  .social-media {
-    width: 100%;
-    padding: 300px 30px;
-    border-radius: 50%;
-    transition: all 100ms ease-in-out;
-    color: var(--seconday-color);
-    width: 100%;
-  }
 }
 
 @media (min-width: 1200px) {
@@ -368,13 +359,29 @@ i:hover {
     justify-content: center;
   }
 
+  .redsky-description {
+    font-family: var(--font-family);
+    color: white;
+    font-size: 30px;
+    text-align: inherit;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .social-media-about {
+    width: 100%;
+    padding: 0 auto;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+    color: var(--seconday-color);
+  }
   .contact-info {
     font-size: 25px !important;
     color: var(--tertiarty-color);
   }
 
   #map {
-    max-width: 100%;
+    max-width: 70%;
     display: block;
     margin: 0 auto;
   }
@@ -393,5 +400,9 @@ i:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+  }
+
+  .follow-us {
+    font-size: 20px;
   }
 }
