--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -344,7 +344,16 @@ i:hover {
   }
 
   .follow-us {
-    font-size: 25px;
+    font-size: 35px;
+  }
+
+  i {
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+    color: var(--seconday-color);
+    width: 100%;
   }
 
   .social-media-home,
