--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -206,9 +206,9 @@ i:hover {
   }
 
   .navbar-toggler {
-    width: 40px;
-    height: 10px;
-    margin-top: 20px;
+    width: 60px;
+    height: 20px;
+    margin: 30px;
     position: relative;
     transition: 0.5s ease-in-out;
   }
@@ -223,7 +223,7 @@ i:hover {
   }
 
   .navbar-toggler span {
-    margin: 0;
+    margin: 0px;
     padding: 0;
   }
 
