--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -139,7 +139,21 @@ span,
   flex-wrap: nowrap;
 }
 
-p .address {
+.us-content-container {
+  padding: 100px 300px 100px;
+  line-height: 2;
+  display: block;
+  text-align: center;
+}
+
+.us-content {
+  padding: 30px;
+  color: white;
+  font-size: 25px;
+  text-align: justify;
+}
+
+.address p {
   color: var(--tertiarty-color);
   font-size: 12px;
   text-align: center;
@@ -282,7 +296,8 @@ i:hover {
     padding: 200px 100px 0px;
     display: block;
   }
-  .redsky-description {
+  .redsky-description,
+  .profile-content {
     font-family: var(--font-family);
     color: white;
     font-size: 45px;
@@ -303,6 +318,13 @@ i:hover {
     margin: 0 auto;
     display: block;
     padding: 10px 0;
+  }
+
+  .us-content-container {
+    padding: 200px 100px 10px;
+    line-height: 2;
+    display: block;
+    text-align: center;
   }
 
   .studio-images {
