--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -187,6 +187,10 @@ footer {
   padding-top: 470px;
 }
 
+.social-media-studio {
+  padding-top: 30px;
+}
+
 i {
   width: 100%;
   padding: 10px 20px;
