--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -107,7 +107,7 @@ span,
 }
 
 .hero p {
-  font-family: "Libre Baskerville", serif;
+  font-family: "Bebas Neue", sans-serif;
   color: white;
   font-size: 30px;
   font-weight: 400;
