--- a/src/styling.css
+++ b/src/styling.css
@@ -15,7 +15,7 @@ img {
     text-align: center;
     margin: 0 auto;
     display: block;
-    padding: 10px 0;
+    padding: 50px 50px 0;
 }
 
  .content {
