--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #000;
-  --seconday-color: red;
-  --tertiarty-color: #d1d7de;
+  --secondary-color: red;
+  --tertiary-color: #d1d7de;
   --quaternary-color: #897467;
   --font-family: "Archivo", sans-serif;
 }
@@ -10,16 +10,11 @@ body {
   background-color: var(--primary-color) !important;
 }
 
-span,
-.coders-link {
+span {
   font-size: 9px;
-  color: var(--tertiarty-color) !important;
+  color: var(--tertiary-color) !important;
   padding-top: 50px;
   text-align: center;
-}
-.coders-link {
-  font-weight: 200;
-  text-decoration: none;
 }
 
 .nav-link {
@@ -156,7 +151,7 @@ body {
 .office-country,
 .us-team {
   font-family: var(--font-family);
-  color: var(--tertiarty-color) !important;
+  color: var(--tertiary-color) !important;
   font-size: 18px;
   line-height: 1.5;
 }
@@ -165,13 +160,6 @@ body {
   margin: 10px 30px;
   padding: 50px 100px;
   display: block;
-}
-
-.upcoming-content img {
-  max-width: 50%;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: nowrap;
 }
 
 div.scroll-container {
@@ -187,7 +175,7 @@ div.scroll-container img {
 
 
 .map-office {
-  color: var(--tertiarty-color);
+  color: var(--tertiary-color);
   font-size: 22px;
   text-align: center;
 }
@@ -197,7 +185,7 @@ div.scroll-container img {
   margin: 0 auto;
 }
 
-.projects-background body {
+body.projects-background {
   background-color: #000;
 }
 
@@ -243,28 +231,46 @@ i:hover {
   padding: 50px 100px 65px;
 }
 
-.footer-work-page {
-  display: flex;
-  flex-direction: column;
-  visibility: hidden;
+* {
+  box-sizing: border-box;
+}
+
+#backToTopBtn {
+  display: none; /* Hidden by default */
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  font-size: 25px;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  outline: none;
+  padding: 15px;
+  border-radius: 100%;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
+  transition: background 0.3s;
+}
+
+#backToTopBtn:active {
+  background-color: transparent;
+  color: white;
 }
 
 @media (max-width: 1200px) {
-  img {
-    max-width: 100%;
-  }
-
   .hero p {
     font-size: 50px;
   }
 
   .contact-info {
     font-size: 40px !important;
-    color: var(--tertiarty-color);
+    color: var(--tertiary-color);
   }
 
-  .nav-item {
-    font-size: 50px;
+  li.nav-item {
+    font-size: 30px;
+    padding: 1px;
   }
 
   .navbar-toggler {
@@ -345,11 +351,10 @@ i:hover {
     display: block;
   }
   .redsky-description,
-  .profile-content,
-  .us-team {
+  .profile-content {
     font-family: var(--font-family);
     color: white;
-    font-size: 45px;
+    font-size: 24px;
     text-align: inherit;
     margin: 0 auto;
     display: block;
@@ -429,11 +434,13 @@ i:hover {
   }
 
   .follow-us {
-    font-size: 40px;
+    font-size: 24px;
+    color: var(--tertiary-color);
   }
 
-  .fa-brands {
-    font-size: 60px !important;
+  .fa-brands { 
+    font-size: 40px !important;
+    color: var(--secondary-color); 
   }
 
   .social-media-home-index {
@@ -444,23 +451,15 @@ i:hover {
   .social-media-studio {
     padding: 30px 30px;
   }
-  .social-media-home,
-  .social-media-about,
-  .social-media-us,
-  .social-media-studio,
-  .social-media-contact,
-  .social-media-work {
+  .social-media-section {
     width: 100%;
     border-radius: 50%;
     transition: all 100ms ease-in-out;
-    color: var(--seconday-color);
+    color: var(--secondary-color);
   }
 }
 
 @media (min-width: 1200px) {
-  img {
-    max-width: 100%;
-  }
 
   .navbar-collapse {
     justify-content: center;
@@ -477,15 +476,15 @@ i:hover {
 
   .social-media-about {
     width: 100%;
-    padding: 0 auto;
+    margin: 0 auto;
     border-radius: 50%;
     transition: all 100ms ease-in-out;
-    color: var(--seconday-color);
+    color: var(--secondary-color);
   }
 
   .contact-info {
     font-size: 25px !important;
-    color: var(--tertiarty-color);
+    color: var(--tertiary-color);
   }
 
   #map {
@@ -511,11 +510,12 @@ i:hover {
   }
 
   .follow-us {
-    font-size: 20px;
+    font-size: 24px;
+    color: var(--tertiary-color);
+  }
+
+  .fa-brands {
+    font-size: 40px !important;
+    color: var(--secondary-color);
   }
 }
-
- .fa-brands {
-    font-size: 40px !important;
-    color: var(--seconday-color);
-  }
