--- a/src/styles.css
+++ b/src/styles.css
@@ -242,19 +242,17 @@ i:hover {
   right: 30px;
   z-index: 99;
   font-size: 25px;
-  background-color: var(--primary-color);
+  background-color: transparent;
   color: white;
   border: none;
   outline: none;
   padding: 15px;
-  border-radius: 100%;
+  border-radius: 0;
   cursor: pointer;
-  box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
   transition: background 0.3s;
 }
 
 #backToTopBtn:active {
-  background-color: transparent;
   color: white;
 }
 
