--- a/src/styles.css
+++ b/src/styles.css
@@ -145,15 +145,40 @@ body {
   padding: 10px 10px 10px;
   margin: 0 auto;
 }
-.ceo-contact,
-.ceo-number,
-.office-address,
-.office-country,
-.us-team {
+.contact-info {
   font-family: var(--font-family);
   color: var(--tertiary-color) !important;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.5;
+}
+
+.call-us {
+  display: inline-block;
+  background-color: var(--primary-color);
+  color: white;
+  font-family: var(--font-family);
+  font-size: 18px;
+  padding: 15px 25px;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.call-us:hover {
+  background-color: var(--primary-color);
+  color: white;
+  transform: scale(1.05);
+}
+
+.call-us i {
+  margin-right: 10px;
+}
+
+
+.contact-content a{
+  text-decoration: none;
+  color: var(--quaternary-color);
+  font-size: 19px;
 }
 
 .content-container {
@@ -380,29 +405,6 @@ i:hover {
     font-family: var(--font-family);
   }
 
-  .us-content-container {
-    padding: 200px 100px 10px;
-    line-height: 2;
-    display: block;
-    text-align: center;
-  }
-
-  .us-content {
-    padding: 30px;
-    color: white;
-    font-size: 40px;
-    text-align: justify;
-  }
-
-  .studio-images {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-
   .content h3 {
     font-size: 50px;
     padding: 30px 50px;
@@ -413,12 +415,27 @@ i:hover {
     font-size: 30px;
   }
 
+  .projects-background .btn-sm {
+    font-size: 18px;
+    padding: 15px 25px;
+    border-radius: 8px;
+  }
   .contact-content {
     max-width: 100%;
     padding: 100px 0 100px 0;
     margin: 0 auto;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .contact-info {
+    font-size: 20px;
+  }
+
+  .contact-content a{
+    text-decoration: none;
+    color: var(--quaternary-color);
+    font-size: 19px;
   }
 
   #map {
