--- a/src/styles.css
+++ b/src/styles.css
@@ -287,7 +287,7 @@ i:hover {
   }
 
   .homepage {
-    background-size: contain; /* makes the whole image visible */
+    background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: scroll; /* optional, prevents fixed zoom issues */
