--- a/src/styles.css
+++ b/src/styles.css
@@ -289,7 +289,7 @@ i:hover {
   .homepage {
     background-size: 80% auto;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: center;
     background-attachment: scroll; /* optional, prevents fixed zoom issues */
   }
 
