--- a/src/styling.css
+++ b/src/styling.css
@@ -15,7 +15,7 @@ img {
     text-align: center;
     margin: 0 auto;
     display: block;
-    padding: 50px 50px 0;
+    padding-top: 100px;
 }
 
  .content {
@@ -43,6 +43,13 @@ img {
   }
   .profile-photo {
     max-width: 100%;
+  }
+
+  .content {
+    padding-top: 100px;
+    color: white;
+    font-size: 30px;
+    text-align: center;
   }
 
   p.content {
