--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ body {
 
 .homepage {
   background-image:
-    url("../images/background.jpeg");
+    url("../images/redsky_background.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -299,8 +299,8 @@ i:hover {
   }
 
   li.nav-item {
-    font-size: 40px;
-    padding: 3px;
+    font-size: 30px;
+    padding: 20px;
   }
 
   .navbar-toggler {
