--- a/src/style.css
+++ b/src/style.css
@@ -96,6 +96,20 @@ h1 {
     color: var(--secondary-color);
   }
 
+  i {
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+  color: var(--primary-color);
+  width: 100%;
+}
+
+i:hover {
+  color: white;
+  background: #000;
+}
+
  
 @media (min-width: 1200px) {
 
@@ -224,21 +238,22 @@ h1 {
     transform: rotate(0deg);
   }
 
-  .disclaimer {
+  .disclaimer p {
     color: var(--tertiary-color);
-    font-size: 11px;
+    font-size: 10px;
+    text-align: center;
   }
 
   h1 {
     color: var(--tertiary-color) !important;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 700;
   }
 
-  .movie-description {
+  .movie-description p {
     color: var(--tertiary-color);
-    font-size: 13px;
+    font-size: 20px;
     padding-left: 10px;
     padding-right: 10px;
     text-align: justify;
@@ -254,13 +269,9 @@ h1 {
   }
 
   .fa-brands { 
-    font-size: 40px !important;
+    font-size: 20px !important;
     color: var(--secondary-color); 
-  }
-
-  .social-media-home-index {
-    width: 100%;
-    padding: 500px 30px 20px 30px;
+    padding: 20px;
   }
 
   .social-media-studio {
